--- a/admin.html
+++ b/admin.html
@@ -74,7 +74,7 @@
             <div id="userInfoInputForm">
                 <h2>사용자 정보 조회</h2>
                 <input type="text" id="queryNameInput" placeholder="사용자 이름을 입력하세요">
-                <input type="tel" id="queryPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="사용자 비밀번호 8자리">
+                <input type="password" id="password" pattern="[0-9]{8}" maxlength="8" placeholder="사용자 비밀번호 8자리">
                 <button class="main-button" onclick="fetchUserData()">사용자 정보 불러오기</button>
                 <p id="message"></p>
             </div>
