--- a/로그인.html
+++ b/로그인.html
@@ -57,7 +57,7 @@
         <div id="registerForm" class="form-section">
             <h2>회원가입</h2>
             <input type="text" id="regNameInput" placeholder="이름을 입력하세요">
-            <input type="tel" id="regPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)">
+            <input type="password" id="password" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)">
             <button class="main-button" onclick="handleRegister()">회원가입</button>
             <button class="toggle-button" onclick="showForm('loginForm')">이미 회원이신가요? 로그인</button>
         </div>
@@ -66,7 +66,7 @@
         <div id="loginForm" class="form-section">
             <h2>로그인</h2>
             <input type="text" id="loginNameInput" placeholder="이름을 입력하세요">
-            <input type="tel" id="loginPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)">
+            <input type="password" id="password" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)">
             <button class="main-button" onclick="handleLogin()">로그인</button>
             <button class="toggle-button" onclick="showForm('registerForm')">아직 회원이 아니신가요? 회원가입</button>
         </div>
