--- a/로그인.html
+++ b/로그인.html
@@ -8,7 +8,6 @@
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #e0f7fa; margin: 0; }
         .container { background-color: #ffffff; padding: 40px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.1); width: 100%; max-width: 450px; text-align: center; }
         h1 { color: #00796b; margin-bottom: 25px; font-size: 1.8em; }
-        /* 이 부분을 수정했어! */
         input[type="text"], input[type="tel"], input[type="number"], input[type="password"] {
             width: calc(100% - 24px); padding: 14px; margin: 10px 0; border: 1px solid #b2dfdb; border-radius: 8px; box-sizing: border-box; font-size: 1.0em;
         }
@@ -58,7 +57,7 @@
         <div id="registerForm" class="form-section">
             <h2>회원가입</h2>
             <input type="text" id="regNameInput" placeholder="이름을 입력하세요">
-            <input type="password" id="regPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)">
+            <input type="password" id="regPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)"> <!-- 여기 id를 regPhoneInput으로 변경했어! -->
             <button class="main-button" onclick="handleRegister()">회원가입</button>
             <button class="toggle-button" onclick="showForm('loginForm')">이미 회원이신가요? 로그인</button>
         </div>
@@ -67,7 +66,7 @@
         <div id="loginForm" class="form-section">
             <h2>로그인</h2>
             <input type="text" id="loginNameInput" placeholder="이름을 입력하세요">
-            <input type="password" id="loginPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)">
+            <input type="password" id="loginPhoneInput" pattern="[0-9]{8}" maxlength="8" placeholder="비밀번호 8자리 (예: 12345678)"> <!-- 여기 id를 loginPhoneInput으로 변경했어! -->
             <button class="main-button" onclick="handleLogin()">로그인</button>
             <button class="toggle-button" onclick="showForm('registerForm')">아직 회원이 아니신가요? 회원가입</button>
         </div>
@@ -108,7 +107,7 @@
 
         async function handleRegister() {
             const name = document.getElementById('regNameInput').value.trim();
-            const phone = document.getElementById('regPhoneInput').value.trim();
+            const phone = document.getElementById('regPhoneInput').value.trim(); // 'phone' 변수는 그대로 유지돼!
             const messageElement = document.getElementById('message');
             messageElement.textContent = ''; // 이전 메시지 초기화
 
@@ -146,7 +145,7 @@
 
         async function handleLogin() {
             const name = document.getElementById('loginNameInput').value.trim();
-            const phone = document.getElementById('loginPhoneInput').value.trim();
+            const phone = document.getElementById('loginPhoneInput').value.trim(); // 'phone' 변수는 그대로 유지돼!
             const messageElement = document.getElementById('message');
             
             messageElement.textContent = '';
